--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image: url('/bootstrap/images/books.jpg') no-repeat center;
+      background-image: url('/bootstrap/images/books.JPG') no-repeat center;
       background-color:#009DC2;
       }
       .navbar-nav {
