--- a/views/index.jade
+++ b/views/index.jade
@@ -124,51 +124,6 @@ head
         -moz-transition: all 0.3s ease;
         transition: all 0.3s ease;
       }
-      .adding{
-        box-shadow: inset 0px 0px 10px 1px #181818;
-        background-color:#333;
-        color:#999;
-      }
-      .adding input {
-        background-color:#333;
-        color:white;
-      }
-      .previous {
-        background-color:#EFAF4F !important;
-        border:0px;
-        border-radius:30px;
-      }
-      .previous a {
-        color:#623B00 !important;
-      }
-      .next {
-        background-color:#565555 !important;
-      }
-      .next:hover{
-        cursor:pointer
-      }
-      .previous:hover {
-        background-color:#DA8403;
-        color:white;
-        cursor:pointer;
-      }
-      .previous:active {
-        background-color:#DA8403;
-        color:white;
-      }
-      .previous:focus {
-        background-color:#DA8403;
-        color:white;
-      }
-      .pager li>a, .pager li>span {
-      display: inline-block;
-      padding: 5px 14px;
-      border: 0px;
-      border-radius: 30px;
-      }
-      a {
-        color:white !important;
-      }
       .container {
         transition: 0.5s -webkit-filter linear;
       }
@@ -223,7 +178,7 @@ head
       a(href='#') О проекте
       a(href="#") Выйти
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
-      //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
+      img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
       
