--- a/views/index.jade
+++ b/views/index.jade
@@ -27,8 +27,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image: url('/bootstrap/images/books.jpg') no-repeat center;
-      background-color:#009DC2;
+      background-image: url('/bootstrap/images/books.jpg');
       }
       .navbar-nav {
        float: right;
