--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,8 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image: url('/bootstrap/images/books.jpg');
+      background-image: url('/bootstrap/images/books.jpg') center;
+      background-color:#009DC2;
       }
       .navbar-nav {
        float: right;
