--- a/views/index.jade
+++ b/views/index.jade
@@ -46,12 +46,14 @@ head
       }
       h1{
         font-family:roboto-thin;
+        color:white;
       }
       h2{
         font-family:roboto-thin;
       }
       h3{
         font-family:roboto-thin;
+        color:white;
       }
       h4{
         font-family:roboto-thin;
@@ -192,8 +194,18 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
+      .row(style='text-align:center;margin-top:20$')
+        .col-xs-12
+          h1 Organise your reading. 
+          h3 Never forget a book.
+      .row(style='text-align:center;')
+        .col-xs-4.col-xs-offset-4
+          input(class='form-control' type='text' style='margin-bottom:5px;' placeholder='email')
+          input(class='form-control' type='text' style='margin-bottom:20px;' placeholder='password')
+          button(class='btn btn-primary' type='button' style='border-radius:30px;') Register
+
+
       
-             
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
