--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,10 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image: url('/bootstrap/images/books.jpg');
+      background-image:linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.7)
+    ), url('/bootstrap/images/books.jpg');
       background-color:#009DC2;
       background-position:center;
       background-size: cover;
