--- a/views/index.jade
+++ b/views/index.jade
@@ -197,7 +197,7 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
-      .row(style='text-align:center;margin-top:20$')
+      .row(style='text-align:center;margin-top:20%;margin-bottom:20px;')
         .col-xs-12
           h1 Organise your reading. 
           h3 Never forget a book.
@@ -205,7 +205,7 @@ head
         .col-xs-4.col-xs-offset-4
           input(class='form-control' type='text' style='margin-bottom:5px;' placeholder='email')
           input(class='form-control' type='text' style='margin-bottom:20px;' placeholder='password')
-          button(class='btn btn-primary' type='button' style='border-radius:30px;') Register
+          button(class='btn btn-primary' type='button' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border-0px;') Register
 
 
       
