--- a/views/index.jade
+++ b/views/index.jade
@@ -196,7 +196,7 @@ head
         .col-xs-4.col-xs-offset-4
           input(class='form-control' type='text' style='margin-bottom:5px;' placeholder='email')
           input(class='form-control' type='text' style='margin-bottom:20px;' placeholder='password')
-          button(class='btn btn-primary' type='button' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border-0px;') Register
+          button(class='btn btn-primary' type='button' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Register
 
 
       
