--- a/views/index.jade
+++ b/views/index.jade
@@ -188,9 +188,9 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
-      .row(style='text-align:center;margin-top:20%;margin-bottom:20px;')
+      .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
         .col-xs-12
-          h1 Organise your reading. 
+          h1(style='font-size:50px;') Organise your reading. 
           h3 Never forget a book.
       .row(style='text-align:center;')
         .col-xs-4.col-xs-offset-4
