--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,7 @@ head
       rgba(0, 0, 0, 0.7), 
       rgba(0, 0, 0, 0.2)
       ), url('/bootstrap/images/books.jpg');
-      background-color:#009DC2;
+      background-color:#668176;
       background-position:center;
       background-size: cover;
       }
