--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,23 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image:linear-gradient(
+      background-image: -webkit-linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.2)
+      ), url('/bootstrap/images/books.jpg'); 
+      background-image:    -moz-linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.2)
+      ), url('/bootstrap/images/books.jpg'); 
+      background-image:     -ms-linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.2)
+      ), url('/bootstrap/images/books.jpg'); 
+      background-image:      -o-linear-gradient(
+      rgba(0, 0, 0, 0.7), 
+      rgba(0, 0, 0, 0.2)
+      ), url('/bootstrap/images/books.jpg'); 
+      background-image:         linear-gradient(
       rgba(0, 0, 0, 0.7), 
       rgba(0, 0, 0, 0.2)
       ), url('/bootstrap/images/books.jpg');
