--- a/views/index.jade
+++ b/views/index.jade
@@ -50,6 +50,7 @@ head
       background-color:#668176;
       background-position:center;
       background-size: cover;
+      background-repeat:no-repeat;
       }
       .navbar-nav {
        float: right;
