--- a/views/index.jade
+++ b/views/index.jade
@@ -27,30 +27,6 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-image: -webkit-linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.2)
-      ), url('/bootstrap/images/books.jpg'); 
-      background-image:    -moz-linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.2)
-      ), url('/bootstrap/images/books.jpg'); 
-      background-image:     -ms-linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.2)
-      ), url('/bootstrap/images/books.jpg'); 
-      background-image:      -o-linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.2)
-      ), url('/bootstrap/images/books.jpg'); 
-      background-image:         linear-gradient(
-      rgba(0, 0, 0, 0.7), 
-      rgba(0, 0, 0, 0.2)
-      ), url('/bootstrap/images/books.jpg');
-      background-color:#668176;
-      background-position:center;
-      background-size: cover;
-      background-repeat:no-repeat;
       }
       .navbar-nav {
        float: right;
@@ -189,6 +165,17 @@ head
           outline:0px !important;
           -webkit-appearance:none;
       }
+      .bckgrnd {
+      width:100%;
+      height:100%;
+      background-image:url('/bootstrap/images/books.jpg');
+      z-index:1;
+      background-color:#668176;
+      background-position:center;
+      background-size: cover;
+      background-repeat:no-repeat;
+      filter: brightness(0.6);
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
@@ -204,7 +191,8 @@ head
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
-    .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
+    .bckgrnd
+    .container(style='padding-left:84px;width:100% !important;padding-right:none;z-index:2;')  
       .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
