--- a/views/index.jade
+++ b/views/index.jade
@@ -169,7 +169,7 @@ head
       width:100%;
       height:100%;
       background-image:url('/bootstrap/images/books.jpg');
-      z-index:1;
+      position:fixed;
       background-color:#668176;
       background-position:center;
       background-size: cover;
