--- a/views/index.jade
+++ b/views/index.jade
@@ -175,6 +175,9 @@ head
       background-size: cover;
       background-repeat:no-repeat;
       filter: brightness(0.6);
+      -webkit-filter: brightness(0.6);
+      -moz-filter: brightness(0.6);
+      -o-filter: brightness(0.6);
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
