--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ head
     |     
     meta(name='viewport', content='width=device-width, initial-scale=1')
     |     
-    title Recent ones
+    title P&B
     // Bootstrap
     link(href='/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
@@ -179,6 +179,10 @@ head
       -moz-filter: brightness(0.6);
       -o-filter: brightness(0.6);
       }
+      nav ul li a {
+        border:0px;
+        background-color:rgba(255, 255, 255, 0.26);
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
@@ -200,12 +204,19 @@ head
         .col-xs-12
           h1(style='font-size:50px;') Organise your reading. 
           h3 Never forget a book.
+      .row
+        #message.col-xs-12
       .row(style='text-align:center;')
         .col-xs-4.col-xs-offset-4
-          input(class='form-control' type='text' style='margin-bottom:5px;' placeholder='email')
-          input(class='form-control' type='text' style='margin-bottom:20px;' placeholder='password')
-          button(class='btn btn-primary' type='button' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Register
-
+          input(class='form-control' type='text' style='margin-bottom:5px;' name='mail' placeholder='email')
+          input(class='form-control' type='text' style='margin-bottom:20px;' name='p' placeholder='password')
+          //button(class='btn btn-primary' type='button' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Register
+          nav
+            ul(class="pager")
+              li
+                a(href="#") Войти
+              li
+                a(href="#") Регистрация
 
       
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
@@ -236,6 +247,82 @@ head
                         break;
                       }
         };
-        
+        //-------REGISTER--------
+        function validateEmail(email) { 
+      console.log('checking email');
+      var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+      return re.test(email);} 
+      $('#loginb').click(function(){
+      var errcount =0;
+      var vp =$('#p').val();
+      var vpc =$('#pc').val();
+      $('#message').empty();
+      console.log(vp.length);
+      if(vpc.length === 0 && vp.length === 0) {
+      console.log('in pass length 0');
+      $('#message').append("<h5 style='color:#fc454e;'>Provide a password, and verify it</h5>");
+      $('#p').empty();
+      $('#pc').empty();
+      errcount++;
+      }
+      if(vp != vpc && errcount===0) {
+      $('#message').append("<h5 style='color:#fc454e;'>passwords don't match</h5>");
+      $('#p').empty();
+      $('#pc').empty();
+      errcount++;
+      }
+      
+      var vmail = $('#mail').val();
+      console.log(vmail);
+      var mailx = validateEmail(vmail);
+      if(mailx != true)
+      {
+      $('#message').append("<h5 style='color:#fc454e;'>incorrect email</h5>");
+      errcount++;
+      }
+      var username = $('#u').val();
+      console.log(username);
+      if (username.length === 0)
+      {
+      $('#message').empty;
+      $('#message').append("<h5 style='color:#fc454e;'>Add a profile name </h5>");
+      errcount++;
+      }
+      if (errcount>0){
+      return
+      }
+      console.log('submitting now');
+      //$("#regform").submit();
+      request = new XMLHttpRequest();
+      request.onreadystatechange = function () {
+      var DONE = this.DONE || 4;
+      if (this.readyState === DONE){
+      parsed = JSON.parse(request.responseText);
+      console.log(parsed);
+      // do your job here
+      if (parsed.trouble === 1)
+      {
+      $('#message').empty();
+      switch (parsed.mtext)
+      {
+      case('fail'):
+      $('#message').append("<h5 style='color:#fc454e;'>Sorry, omething is slightly off with the DB, try again in a couple of minutes or contact support</h5>");
+      break;
+      case('email exists'):
+      $('#message').append("<h5 style='color:#fc454e;'>Provided email is already used by one of the users</h5>");
+      break;
+      
+      }
+      }
+      else { console.log('HEY');window.location = 'http://topandviews.ru';}
+      }
+      };
+      request.open('POST', '/newuser', true);
+      request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+      request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+      // Most libraries like jQuery/Prototype/Dojo do this
+      request.send("mail="+vmail+"&u="+username+"&p="+vp);
+      });
+
         
       
