--- a/views/index.jade
+++ b/views/index.jade
@@ -180,8 +180,9 @@ head
       -o-filter: brightness(0.6);
       }
       nav ul li a {
-        border:0px;
-        background-color:rgba(255, 255, 255, 0.26);
+        border:0px !important;
+        background-color:rgba(255, 255, 255, 0.26) !important;
+        color:white !important;
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
