--- a/views/index.jade
+++ b/views/index.jade
@@ -225,7 +225,7 @@ head
       script.
         $('#shownav').click(function(){
           $('#shownav').slideToggle();
-          $('#nav').slideToggle();
+          $('#nav').fadeIn();
           });
         var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
