--- a/views/index.jade
+++ b/views/index.jade
@@ -224,7 +224,7 @@ head
       script(async src='/js/bootstrap.min.js')
       script.
         $('#shownav').click(function(){
-          $('#shownav').slideToggle();
+          $('#shownav').fadeOut();
           $('#nav').fadeIn();
           });
         var counter =0;
