--- a/views/index.jade
+++ b/views/index.jade
@@ -185,7 +185,7 @@ head
         color:white !important;
       }
       .hiddenbuttons {
-        display:none;
+        display:none !important;
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
