--- a/views/index.jade
+++ b/views/index.jade
@@ -184,9 +184,6 @@ head
         background-color:rgba(255, 255, 255, 0.26) !important;
         color:white !important;
       }
-      .hiddenbuttons {
-        display:none !important;
-      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
@@ -214,15 +211,14 @@ head
         .col-xs-4.col-xs-offset-4
           input(class='form-control' type='text' style='margin-bottom:5px;' name='mail' placeholder='email')
           input(class='form-control' type='text' style='margin-bottom:20px;' name='p' placeholder='password')
-          //button(class='btn btn-primary' type='button' id='shownav' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
-          nav(id='nav')
-            ul(class="pager")
-              li(class='previous hiddenbuttons')
-                a(href="#") Войти
-              li
-                button(class='btn btn-primary' type='button' id='shownav' style='border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
-              li(class='next hiddenbuttons')
-                a(href="#") Регистрация
+          #wrap(style='width:100%;')
+            button(class='btn btn-primary' type='button' id='shownav' style='z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
+            nav(id='nav' style='z-index:1;display:none;')
+              ul(class="pager")
+                li(class='previous')
+                  a(href="#") Войти
+                li(class='next')
+                  a(href="#") Регистрация
 
       
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
