--- a/views/index.jade
+++ b/views/index.jade
@@ -212,7 +212,7 @@ head
           input(class='form-control' type='text' style='margin-bottom:5px;' name='mail' placeholder='email')
           input(class='form-control' type='text' style='margin-bottom:20px;' name='p' placeholder='password')
           #wrap(style='width:100%;')
-            button(class='btn btn-primary' type='button' id='shownav' style='z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
+            button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
               ul(class="pager")
                 li(class='previous')
