--- a/views/index.jade
+++ b/views/index.jade
@@ -228,7 +228,7 @@ head
           $('#shownav').fadeOut();
           $('#nav').fadeIn();
           });
-        $('#login').click(authsubmit());
+        $('#login').click(authsubmit);
         var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
             menuRight = document.getElementById( 'cbp-spmenu-s2' ),
