--- a/views/index.jade
+++ b/views/index.jade
@@ -185,6 +185,10 @@ head
         color:white !important;
       }
   body
+    script.
+      if(screen.width < 414){
+      window.location='http://m.peopleandbooks.com/';
+      }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
@@ -209,8 +213,8 @@ head
         #message.col-xs-12
       .row(style='text-align:center;')
         .col-xs-4.col-xs-offset-4
-          input(class='form-control' type='text' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
-          input(class='form-control' type='text' style='margin-bottom:20px;' id='vphr' name='p' placeholder='password')
+          input(class='form-control' type='email' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
+          input(class='form-control' type='password' style='margin-bottom:20px;' id='vphr' name='p' placeholder='password')
           #wrap(style='width:100%;')
             button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
