--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -21,22 +21,22 @@ head
       src:url('/bootstrap/fonts/Roboto-Thin.ttf');
       }
       h1 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       h2 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       h3 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       h4 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       h5 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       h6 {
-        font-family:robot-thin;
+        font-family:roboto-thin;
       }
       textarea:hover, 
       input:hover, 
@@ -69,6 +69,10 @@ head
         border:0px !important;
         background-color:rgba(255, 255, 255, 0.26) !important;
         color:white !important;
+      }
+      .navbar-inverse {
+      background-color: rgba(34, 34, 34, 0.34);
+      border:none;
       }
   body
     nav(class='navbar navbar-fixed-top navbar-inverse')
