--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -22,21 +22,27 @@ head
       }
       h1 {
         font-family:roboto-thin;
+        color:white;
       }
       h2 {
         font-family:roboto-thin;
+        color:white;
       }
       h3 {
         font-family:roboto-thin;
+        color:white;
       }
       h4 {
         font-family:roboto-thin;
+        color:white;
       }
       h5 {
         font-family:roboto-thin;
+        color:white;
       }
       h6 {
         font-family:roboto-thin;
+        color:white;
       }
       textarea:hover, 
       input:hover, 
