--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -129,6 +129,11 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
+      $('#shownav').click(function(){
+          $('#shownav').fadeOut();
+          $('#nav').fadeIn();
+          });
+        $('#login').click(authsubmit);
       // AUTHSUBMIT FUNCTION
       var allowauth = 1;
       function authsubmit() {
