--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -94,6 +94,8 @@ head
       -webkit-transition: all 300ms;
       transition: all 300ms;
       }
+      body.menu-active div#content { left: 284px; border-radius: 7px 0 0 7px; }
+      body.menu-active div#content .menu-trigger { left: 294px; }
   body
     //nav(class='navbar navbar-fixed-top navbar-inverse')
     //  .container
@@ -145,7 +147,7 @@ head
                 li(class='next')
                   a(href="/register") Регистрация
       .row
-        .col-xs-12(style='text-align:left;position:absolute;bottom:0px;')
+        .col-xs-12(style='text-align:right;position:absolute;bottom:15px;')
           span(class='glyphicon glyphicon-align-justify menu-trigger' style='color:white;font-size:30px;margin-top:20px;')
 
     
