--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -80,22 +80,79 @@ head
       background-color: rgba(34, 34, 34, 0.34);
       border:none;
       }
-      nav#slide-menu {
-      position: fixed;
-      top: 0;
-      left: -100px;
-      bottom: 0;
-      display: block;
-      float: left;
-      width: 100%;
-      max-width: 284px;
-      height: 100%;
-      -moz-transition: all 300ms;
-      -webkit-transition: all 300ms;
-      transition: all 300ms;
+      .cbp-spmenu {
+        background: #1d1d1d;
+        position: fixed;
       }
-      body.menu-active div#content { left: 284px; border-radius: 7px 0 0 7px; }
-      body.menu-active div#content .menu-trigger { left: 294px; }
+      
+      .cbp-spmenu h3 {
+        color: skyblue;
+        font-size: 1.9em;
+        padding: 20px;
+        padding-top:27px;
+        margin: 0;
+        font-weight: 300;
+      }
+      
+      .cbp-spmenu a {
+        display: block;
+        color: #999;
+        font-size: 1.1em;
+        font-weight: 300;
+      }
+      
+      .cbp-spmenu a:hover {
+        background: #333;
+        text-decoration:none !important;
+      }
+      
+      .cbp-spmenu a:active {
+        background: #afdefa;
+        color: #47a3da;
+      }
+      .cbp-spmenu-vertical {
+        width: 240px;
+        margin-left:74px;
+        border-left:1px solid #333;
+        height: 100%;
+        top: 0;
+        z-index: 1000;
+      }
+      
+      .cbp-spmenu-vertical a {
+        padding: 1em;
+      }
+      .cbp-spmenu-left {
+        left: -240px;
+      }
+      .cbp-spmenu-left.cbp-spmenu-open {
+        left: 0px;
+      }
+      .cbp-spmenu-push {
+        overflow-x: hidden;
+        position: relative;
+        left: 0;
+      }
+      
+      .cbp-spmenu-push-toright {
+        left: 240px;
+      }
+      
+      .cbp-spmenu-push-toleft {
+        left: -240px;
+      }
+      .cbp-spmenu,
+      .cbp-spmenu-push {
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+      }
+      .container {
+        transition: 0.5s -webkit-filter linear;
+      }
+      .navbar-right {
+        float: none !important; 
+      }
   body
     //nav(class='navbar navbar-fixed-top navbar-inverse')
     //  .container
@@ -119,13 +176,17 @@ head
     //        li 
     //          a(href='/misc/1') 
     //            h1 Контакты
-    nav(id="slide-menu")
-      ul
-        li(class="timeline") Timeline
-        li(class="events") Events
-        li(class="calendar") Calendar
-        li(class="sep settings") Settings
-        li(class="logout") Logout
+    nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
+      h3(style='text-align:center;color:orange;') People & Books
+      form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
+        .input-group
+           input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
+           span(class='input-group-btn')
+             button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
+               span(class='glyphicon glyphicon-search') 
+      a(href="#") Настройки
+      a(href='#') О проекте
+      a(href="#") Выйти
     .bckgrnd
     .container
       .row(style='text-align:center;margin-top:15%;margin-bottom:20px;')
@@ -148,7 +209,7 @@ head
                   a(href="/register") Регистрация
       .row
         .col-xs-12(style='text-align:right;position:absolute;bottom:15px;')
-          span(class='glyphicon glyphicon-align-justify menu-trigger' style='color:white;font-size:30px;margin-top:20px;')
+          span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;margin-top:20px;')
 
     
       //
@@ -156,22 +217,34 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      (function() {
-       var $body = document.body
-       , $menu_trigger = $body.getElementsByClassName('menu-trigger')[0];
-     
-       if ( typeof $menu_trigger !== 'undefined' ) {
-         $menu_trigger.addEventListener('click', function() {
-           $body.className = ( $body.className == 'menu-active' )? '' : 'menu-active';
-         });
-       }
-     
-      }).call(this);
       $('#shownav').click(function(){
           $('#shownav').fadeOut();
           $('#nav').fadeIn();
           });
         $('#login').click(authsubmit);
+      var counter =0;
+        var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
+            menuRight = document.getElementById( 'cbp-spmenu-s2' ),
+            showLeft = document.getElementById( 'showLeft' ),
+            showRight = document.getElementById( 'showRight' ),
+            body = document.body;
+        
+        showLeft.onclick = function() {
+          switch(counter)
+            {case(1):
+                         counter=0;
+                         $('#showLeft').removeClass('active' );
+                         $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
+                         $('.container').css('-webkit-filter','brightness(1)');
+                        break;
+                        case(0):
+                          counter=1;
+                          $('#showLeft').addClass('active' );
+                          $('#cbp-spmenu-s1').addClass('cbp-spmenu-open' );
+                          $('.container').css('-webkit-filter','brightness(0.6)');
+                        break;
+                      }
+        };
       // AUTHSUBMIT FUNCTION
       var allowauth = 1;
       function authsubmit() {
